test/library/standard/Sort/errors/sortDomainArray.sparse4.good
sortDomainArray.chpl:36: error: sort() is currently only supported for 1D rectangular arrays
